CHANGES
=======

0.5.1 (Unreleased)
------------------

- BaseMultiChoiceField.missing value is [] by default

- copy field missing value during fieldset data extraction


0.5 (12-21-2012)
----------------

- Added `flat` attribute to field and fieldset, 
  with flat fieldset and composite field uses primary data 
  dictionary instead of sub dict


0.4.1 (12-20-2012)
------------------

- Fixed FileField validation


0.4 (12-12-2012)
----------------

- Added `Composite` field

- Render str in `form:error` message

- Removed `display` mode

- SimpleTerm and SimpleVocabulary renamed to Term and Vocabulary

- Removed `from_items` and `from_value` SimpleVocabulary methods, 
  use Vocabulary constructor instead

- Use `form` layer category for form and field templates

- Button class now inherits from InputField


0.3 (11-27-2012)
----------------

- Allow to add `str` as error in `Form.validate` method

- Better button handling

- Better tanslations for `Invalid` messages

- Changed arguments order for `Invalid` class contrustor 

- Added sub errors support to `Invalid` class

- Added `extract` parameter to `Button` class, if extract is set then action
  extract values from form, adds errors to message and pass data to handler

- Added `pform.button2` decorator, `extract` parameter is true

- Added `max_size` and `allowed_types` parameters to FileField

- Do not override widget's custom tmpl_widget


0.2 (11-13-2012)
----------------

- Fixed submit button template

- Allow to return http response from form update or action handler

- Added support for `player.layout()`


0.1 (11-07-2012)
----------------

- Initial release
