@@ -22,7 +22,7 @@
   {{request.render_tmpl(context.tmpl_actions, context)|safe}}
 
   {%if context.csrf%}
-  <input type="hidden" name="{{context.csrf_name}}" value="{{context.token}}" />
+  <input type="hidden" name="{{context.csrf_name}}" value="{{context.csrf_token}}" />
   {%endif%}
   <input type="hidden" name="__form_identity__" value="{{context.id}}" />
 </form>
