@@ -2,17 +2,20 @@
   <label class="control-label">{{context.title|safe}}</label>
   <div class="clearfix"></div>
 
-  {% for field in context.fields.values() %}
-  {% set error = field.error %}
-  <div{{{'class': 'control-group error' if error else None}|xmlattr}}>
+  {% set grouping = context.fields[context.key_name] %}
+
+  {% for item in grouping.items %}
+  {% set field = context.fields[item['value']] %}
+  <div{{{'class': 'control-group error' if field.error else None}|xmlattr}}>
     <label class="control-label"
            for="{{field.id}}" title="{{field.description}}">
       <small class="muted">{{field.title|safe}}</small>
+      <input type="radio" {{grouping.get_html_attrs(**item)|xmlattr}}>
     </label>
     <div class="controls">
       {{field.render()|safe}}
-      {% if error %}
-        <span class="help-inline">{{error|safe}}</span>
+      {% if field.error %}
+        <span class="help-inline">{{field.error|safe}}</span>
       {% elif field.required %}
         *
       {% endif %}
@@ -20,6 +23,7 @@
     </div>
   </div>
   {% endfor %}
+
   {% if context.description %}
   <div class="controls">
     <p class="help-block">{{context.description|safe}}</p>
