@@ -1,7 +1,14 @@
-from unittest import TestCase
+import sys
 from pyramid import testing
 from pyramid.interfaces import IRequest
 from pyramid.interfaces import IRequestExtensions
+
+if sys.version_info[:2] == (2, 6):
+    from unittest2 import TestCase
+    TestCase
+else:
+    from unittest import TestCase
+
 
 def strip(text):
     return ' '.join([s.strip() for s in text.split('\n')])
