@@ -381,13 +381,13 @@ class TestChoiceField(BaseTestCase):
         field.update()
 
         self.assertEqual(field.items,
-                         [{'checked': True,
+                         [{'checked': 'checked',
                            'description': None,
                            'id': 'test-0',
                            'label': 'One',
                            'name': 'test',
                            'value': 'one'},
-                          {'checked': False,
+                          {'checked': None,
                            'description': None,
                            'id': 'test-1',
                            'label': 'Two',
@@ -400,19 +400,19 @@ class TestChoiceField(BaseTestCase):
         field.update()
 
         self.assertEqual(field.items,
-                         [{'checked': False,
+                         [{'checked': None,
                            'description': '',
                            'id': 'test-novalue',
                            'label': 'select a value ...',
                            'name': 'test',
                            'value': '--NOVALUE--'},
-                          {'checked': True,
+                          {'checked': 'checked',
                            'description': None,
                            'id': 'test-0',
                            'label': 'One',
                            'name': 'test',
                            'value': 'one'},
-                          {'checked': False,
+                          {'checked': None,
                            'description': None,
                            'id': 'test-1',
                            'label': 'Two',
